--- a/internship/internship.csproj
+++ b/internship/internship.csproj
@@ -11,4 +11,8 @@
     <Folder Include="App_Code\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.CommandLine" Version="7.0.0" />
+  </ItemGroup>
+
 </Project>
